fixed issues with top margin spacing

--- a/src/main/resources/static/styles/css/TravelBuddy.css
+++ b/src/main/resources/static/styles/css/TravelBuddy.css
@@ -15,7 +15,7 @@
     width: 100%;
     z-index: 10;
     background-position: center;
-    /*margin-top: -22px;*/
+    margin-top: -22px;
     margin-bottom: -5px;
 }
 
@@ -574,7 +574,7 @@
     padding: 20px;
     /*box-shadow: 0px 0px 10px 0px #c5c5c5;*/
     margin-top: 30px;
-    float: left;
+    /*float: left;*/
     border-radius: 10px;
 }
 .card-deck .card {
@@ -583,6 +583,7 @@
     border-radius: 10px;
     transition: 1s;
     border: 3px solid #0a4275;
+
 }
 
 .card-deck .card img{
